# hephia

./: .coverage  .env.example  .gitignore  EVENT_CATALOG.md  LICENSE  README.md  api_clients.py  clear_data.py  config.py  diff.txt  event_dispatcher.py  full_test.py  global_timer.py  install.py  launch.py  main.py  pet.py  pet_widget.py  pyproject.toml  requirements.txt  services.json  test_prompts.py
brain/: command_preprocessor.py  exo_processor.py  logging_utils.py
brain/cognition/: notification.py
brain/commands/: model.py  preprocessor.py
brain/core/: command_handler.py  processor.py
brain/environments/: action.py  base_environment.py  discord.py  environment_registry.py  meditation.py  notes.py  reflection.py  search.py  terminal_formatter.py  ui_formatter.py  web.py
brain/interfaces/: action.py  base.py  discord.py  exo.py  user.py
brain/prompting/: loader.py
brain/prompts/: core_prompts.yaml  manager.py  prompts.yaml
brain/utils/: tracer.py
client/config/: __main__.py  app.tcss  dialogs.py  models.py  utils.py
client/tui/: __main__.py  app.py  app.tcss  messages.py  ws_client.py
core/: discord_service.py  event_bridge.py  server.py  state_bridge.py  timer.py
display/: hephia_tui.py
internal/: __init__.py  internal.py  internal_context.py
loggers/: __init__.py  formatters.py  loggers.py  manager.py
modules/: __init__.py
modules/actions/: __init__.py  action.py  action_manager.py  drink.py  feed.py  play.py  rest.py
pet/: __init__.py  actions.py  movement.py  pet.py  pet_context.py  pet_state.py  state.py  state_persistence.py
shared_models/: tui_events.py
tools/: README.md  clear_memory_db.py  collect_logs.py  collect_prompts.py  discord_bot.md  discord_bot.py  discord_endpoint_test.py  manifest.json  prune.py  talk.py  unix_bridge_aiohttp.py
utils/: __init__.py  helpers.py  vector.py
visualization/: __init__.py  pet_graphics_item.py  pet_widget.py  renderer.py
(+161 files in other folders)
